--- a/css/styles.css
+++ b/css/styles.css
@@ -375,11 +375,9 @@ h2{
 }
 .social_icon_logo{
     fill: var(--primaryColorCloud);
-}
-.a{
-    display: flex;
-        justify-content: center;
-        align-items: center;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 /* CUSTOMERS */
@@ -494,6 +492,9 @@ h2{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
     width: 360px;
     
+}
+.product_cards:hover .product_cards:active{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .card_text{
     padding-left: 16px;
