--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,8 @@ h2{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 .hero_content{
     text-align: center;
@@ -355,6 +357,13 @@ h2{
         margin-bottom: 8px;
         
 }
+.link{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .social_icon{
     display: flex;
@@ -381,6 +390,9 @@ h2{
 }
 
 /* CUSTOMERS */
+.customer{
+    padding-top: 120px;
+}
 .customers_title{
         font-weight: 600;
         font-size: 36px;
@@ -395,7 +407,7 @@ h2{
         display: flex;
         justify-content: space-between;
 }
-.customer_logo {
+.customer_link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -412,10 +424,7 @@ h2{
     cursor: pointer;
 }
 
-.customer_logo:hover {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+.customer_link:hover, .customer_link:focus {
         width: 100%;
         height: 100%;
         padding-top: 0px;
@@ -484,17 +493,19 @@ h2{
 .cards_link{
     text-decoration: none;
     color: var(--primaryColorNavyBlue);
-    margin-bottom: 32px;
 }
+.cards_link:hover, .cards_link:focus{
+    display: block;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
+}
+
 .product_cards{
     background: #FFFFFF;
     border: 0.5px solid var(--primaryColorCloud);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
     width: 360px;
     
-}
-.product_cards:hover .product_cards:active{
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .card_text{
     padding-left: 16px;
@@ -578,4 +589,9 @@ h2{
         line-height: 1.5;
         letter-spacing: 0.02em;
         margin-bottom: 16px;
+}
+.footer_link:hover, .footer_link:focus{
+    background: var(--primaryColorGreen);
+    border-radius: 50%;
+    background-size: 40px;
 }
